erDiagram
    %% Ticketing — generated by php artisan erd:generate

    ticket_agents {
        bigint id PK
        string name
        string address
        string contacts
        timestamp created_at
        timestamp updated_at
    }

    issued_tickets {
        bigint id PK
        bigint passenger_id FK
        bigint booking_id FK
        bigint user_id FK
        bigint ticket_agent_id FK
        bigint ticket_fare_id FK
        bigint group_ticket_id FK
        string ticket_number
        string pnr
        date issued_date
        date inbound_date
        date outbound_date
        decimal selling_fare
        decimal net_fare
        decimal offer_price
        int is_refundable
        int is_exchangeable
        string baggage_inbound
        string baggage_outbound
        int outbound_pending
        string issue_type
        string status
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }

    issued_ticket_logs {
        bigint id PK
        bigint issued_ticket_id FK
        bigint user_id FK
        string action
        string old_data
        string new_data
        timestamp created_at
        timestamp updated_at
    }

    re_issued_tickets {
        bigint id PK
        bigint user_id FK
        bigint ticket_agent_id FK
        bigint ticket_fare_id FK
        bigint group_ticket_id FK
        bigint route_id FK
        bigint issued_ticket_id FK
        string ticket_number
        string pnr
        date re_issue_date
        date inbound_date
        date outbound_date
        decimal selling_fare
        decimal net_fare
        decimal offer_price
        int is_refundable
        int is_exchangeable
        string baggage_inbound
        string baggage_outbound
        decimal re_issue_charge
        decimal fare_difference
        decimal other_costs
        decimal service_charge
        decimal total_cost
        string payment_by
        string payment_option
        decimal refund_adjustment_amount
        decimal total_customer_payment
        bigint reason_id FK
        string remarks
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }

    refunded_tickets {
        bigint id PK
        bigint user_id FK
        bigint ticket_agent_id FK
        bigint ticket_fare_id FK
        bigint group_ticket_id FK
        bigint issued_ticket_id FK
        string ticket_number
        string pnr
        date refund_date
        date inbound_date
        date outbound_date
        decimal selling_fare
        decimal net_fare
        decimal offer_price
        int is_refundable
        int is_exchangeable
        string baggage_inbound
        string baggage_outbound
        decimal iata_refunded_amount
        decimal refund_to_customer
        decimal service_charge
        decimal refund_compensation
        string payment_by
        bigint reason_id FK
        string remarks
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }

    re_issue_refund_reasons {
        bigint id PK
        string reason_of
        string name
        string default_payment_by
        timestamp created_at
        timestamp updated_at
    }

    ticket_requests {
        bigint id PK
        bigint user_id FK
        bigint request_branch_id FK
        bigint booking_id FK
        bigint passenger_id FK
        bigint issued_ticket_id FK
        string request_type
        string status
        string ticket_option
        date probable_date_up
        date probable_date_down
        date visa_expiry_date
        string remark
        timestamp requested_at
        timestamp processed_at
        timestamp rejected_at
        bigint result_re_issued_ticket_id FK
        bigint result_refunded_ticket_id FK
        bigint result_issued_ticket_id FK
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships
    issued_tickets ||--o{ re_issued_tickets : issued_ticket_id
    issued_tickets ||--o{ refunded_tickets : issued_ticket_id
    issued_tickets ||--o{ ticket_requests : issued_ticket_id
    issued_tickets ||--o{ ticket_requests : result_issued_ticket_id
    issued_tickets ||--|{ issued_ticket_logs : issued_ticket_id
    re_issue_refund_reasons ||--o{ re_issued_tickets : reason_id
    re_issue_refund_reasons ||--o{ refunded_tickets : reason_id
    re_issued_tickets ||--o{ ticket_requests : result_re_issued_ticket_id
    refunded_tickets ||--o{ ticket_requests : result_refunded_ticket_id
    ticket_agents ||--o{ issued_tickets : ticket_agent_id
    ticket_agents ||--o{ re_issued_tickets : ticket_agent_id
    ticket_agents ||--o{ refunded_tickets : ticket_agent_id

